# feinapublica

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ingestion-cron.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_cido_fields.py
api/: index.py
scripts/: bootstrap_first_test.ps1  build_ingestion_summary.py  detect_changes.py  fetch_postings.py  normalize_postings.py  run_api.py  run_api_bg.cmd  run_ingestion.py  run_ingestion_backfill.py  run_ui.ps1  run_ui_bg.cmd  run_web_ts_bg.cmd
src/public_jobs_tracker/: __init__.py  config.py  utils.py
src/public_jobs_tracker/api/: __init__.py  app.py
src/public_jobs_tracker/db/: __init__.py  base.py  models.py  session.py
src/public_jobs_tracker/ingestion/: __init__.py  detect_changes.py  fetch_postings.py  normalize_postings.py  run_ingestion.py
src/public_jobs_tracker/models/: __init__.py  enums.py  job.py  user.py
src/public_jobs_tracker/schemas/: __init__.py  posting.py
src/public_jobs_tracker/services/: __init__.py  users.py
src/public_jobs_tracker/sources/: __init__.py  base.py  registry.py
src/public_jobs_tracker/ui/: __init__.py  data_access.py
streamlit_app/: Home.py
streamlit_app/pages/: 1_Novetats.py  2_Meves_convocatories.py  3_Cerques_guardades.py  4_Detall_convocatoria.py
tests/: conftest.py  test_detect_changes.py  test_hash_content.py  test_pagination.py  test_upsert_postings.py
web-ts/: index.html  package-lock.json  package.json
web-ts/src/: App.tsx  api.ts  styles.css  types.ts
(+3 files in other folders)
