[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-jobs-tracker"
version = "0.1.0"
description = "MVP tracker for Catalan public job postings"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",`n  "fastapi>=0.116.0",`n  "uvicorn>=0.30.6",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "SQLAlchemy>=2.0.36",
  "streamlit>=1.40.0",
  "psycopg[binary]>=3.2.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]